# Detection_de_visage

./: .gitignore  CMakeLists.txt  Makefile  OpencvDetection  README.md  README.md~  detecteFace.cpp  petit_explication.txt
.github/workflows/: cpp.yml
build-mingw64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gpp_check.txt  run_check.txt
models/: README.md
src/: FaceDetector.cpp  FaceDetector.hpp  main.cpp
